fix(styles.css): Fixed alignment of hero text and about.

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 
 .hero {
   display: grid;
+  justify-items: center;
   grid-gap: 0.3rem;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)),
     url(./cranium-cleaners.png);
@@ -38,8 +39,9 @@ body {
 
 .about {
   display: grid;
+  justify-content: center;
   column-gap: 3rem;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 30rem 400px;
   grid-template-areas:
     "a b"
     "c b";
